# hermes-manager

./: .gitignore  README.md  pyproject.toml  start-manager.bat
backend/: skills-lock.json
backend/hermes_manager/: __main__.py  main.py
backend/hermes_manager/api/v1/: export_data.py  files.py  import_data.py  market.py  market_detail.py  mcp.py  memory.py  proxy_skills.py  sessions.py  skills.py  soul.py  terminal_exec.py  toolsets.py  translate.py  update.py
backend/hermes_manager/core/: config.py  exceptions.py
backend/hermes_manager/repos/: config_repo.py  skill_repo.py
backend/hermes_manager/schemas/: market.py  mcp.py  skill.py
backend/hermes_manager/services/: hermes_cli.py  market_service.py  skill_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Drawer.tsx  MemoryPanel.tsx  MemoryViewer.tsx  Sidebar.tsx  SoulEditor.tsx  Toast.tsx
frontend/src/components/market/: MarketPanel.tsx  MarketSkillDetail.tsx
frontend/src/components/mcp/: MCPDetailView.tsx  MCPForm.tsx  MCPPanel.tsx
frontend/src/components/sessions/: SessionDetailView.tsx  SessionsPanel.tsx
frontend/src/components/skills/: SkillDetailView.tsx  SkillForm.tsx  SkillsPanel.tsx
frontend/src/components/toolsets/: ToolsetsPanel.tsx
frontend/src/i18n/: index.tsx
frontend/src/stores/: appStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: market.ts  mcp.ts  skill.ts
